[package]
name = "examples"
version = "0.1.0"
authors = ["Yongkyun Shin <yongkyuns@gmail.com>"]
edition = "2021"
description = "Rust Robotics Algorithms"
license = "MIT"


[dependencies]
rust_robotics_algo = {version="0.1", path="../rust_robotics_algo"}
nannou = {version="0.18"}
osqp ="0.6"

[[example]]
name = "inverted_pendulum_lqr_control"
path = "inverted_pendulum_lqr_control.rs"

[[example]]
name = "inverted_pendulum_mpc_control"
path = "inverted_pendulum_mpc_control.rs"

[[example]]
name = "particle_filter"
path = "particle_filter.rs"